--- a/kafka-webview-ui/src/main/resources/config/base.yml
+++ b/kafka-webview-ui/src/main/resources/config/base.yml
@@ -54,7 +54,7 @@ app:
   consumerIdPrefix: "KafkaWebViewConsumer"
   requireSsl: true
   user:
-    enabled: true
+    enabled: false
     ## Ldap auth settings
     ldap:
       enabled: false
